--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -47,7 +47,7 @@
               <div class="site-top-icons">
                 <ul>
                   <li><a href="#"><span class="icon icon-person"></span></a></li>
-                  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                  <li><a href="#"><span class="icon icon-th-list"></span></a></li>
                   <li>
                     <a href="/cart" class="site-cart">
                       <span class="icon icon-shopping_cart"></span>
@@ -68,30 +68,17 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children">
               <a href="/">首页</a>
-              <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
-                <li class="has-children">
-                  <a href="#">Sub Menu</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="has-children">
-              <a href="/about">关于</a>
+              <a>专区</a>
               <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
+                <li><a href="/region/1">送朋友</a></li>
+                <li><a href="/region/2">送恋人</a></li>
+                <li><a href="/region/3">送长辈</a></li>
               </ul>
             </li>
             <li class="active"><a href="/shop">店铺</a></li>
-            <li><a href="/contact">个人信息</a></li>
+            <li><a href="/contact">我的订单</a></li>
           </ul>
         </div>
       </nav>
@@ -192,47 +179,43 @@
         <div class="row">
           <div class="col-md-12">
             <div class="site-section site-blocks-2">
-              <div class="row justify-content-center text-center mb-5">
-                <div class="col-md-7 site-section-heading pt-4">
-                  <h2>分类目录</h2>
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
+                    <a class="block-2-item" href="/region/1">
+                      <figure class="image">
+                        <img src="/images/home_floor_lover.png" alt="" class="img-fluid" style="width: 100%;">
+                      </figure>
+                      <div class="text">
+                        <span class="text-uppercase">久违亦如初见</span>
+                        <h3>送朋友</h3>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+                    <a class="block-2-item" href="/region/2">
+                      <figure class="image">
+                        <img src="/images/home_floor_song.jpg" alt="" class="img-fluid" style="width: 100%;">
+                      </figure>
+                      <div class="text">
+                        <span class="text-uppercase">所有怦然心动，都是你</span>
+                        <h3>送恋人</h3>
+                      </div>
+                    </a>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+                    <a class="block-2-item" href="/region/3">
+                      <figure class="image">
+                        <img src="/images/home_floor_elder.png" alt="" class="img-fluid" style="width: 100%;">
+                      </figure>
+                      <div class="text">
+                        <span class="text-uppercase">谢谢你 我爱你</span>
+                        <h3>送长辈</h3>
+                      </div>
+                    </a>
+                  </div>
                 </div>
               </div>
-              <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
-                  <a class="block-2-item" href="#">
-                    <figure class="image">
-                      <img src="/images/home_floor_lover.png" alt="" class="img-fluid" style="width: 100%;">
-                    </figure>
-                    <div class="text">
-                      <span class="text-uppercase">鲜花</span>
-                      <h3>爱情鲜花专区</h3>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-                  <a class="block-2-item" href="#">
-                    <figure class="image">
-                      <img src="/images/home_floor_song.jpg" alt="" class="img-fluid" style="width: 100%;">
-                    </figure>
-                    <div class="text">
-                      <span class="text-uppercase">永生花</span>
-                      <h3>永生花专区</h3>
-                    </div>
-                  </a>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-                  <a class="block-2-item" href="#">
-                    <figure class="image">
-                      <img src="/images/home_floor_elder.png" alt="" class="img-fluid" style="width: 100%;">
-                    </figure>
-                    <div class="text">
-                      <span class="text-uppercase">鲜花</span>
-                      <h3>送长辈鲜花专区</h3>
-                    </div>
-                  </a>
-                </div>
-              </div>
-
             </div>
           </div>
         </div>
