--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -44,13 +44,9 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li><a href="#"><span class="icon icon-person"></span></a></li>
-                  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                  <li><a href="/login"><span class="icon icon-person"></span></a></li>
+                  <li><a href="/contact"><span class="icon icon-th-list"></span></a></li>
                   <li>
-                    <a href="/cart" class="site-cart">
-                      <span class="icon icon-shopping_cart"></span>
-                      <span class="count">2</span>
-                    </a>
                   </li> 
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
                 </ul>
@@ -65,30 +61,17 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children">
               <a href="/">首页</a>
-              <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
-                <li class="has-children">
-                  <a href="#">Sub Menu</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="has-children">
-              <a href="/about">关于</a>
+              <a>专区</a>
               <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
+                <li><a href="/region/1">送朋友</a></li>
+                <li><a href="/region/2">送恋人</a></li>
+                <li><a href="/region/3">送长辈</a></li>
               </ul>
             </li>
             <li><a href="/shop">店铺</a></li>
-            <li><a href="/contact">收货地址</a></li>
+            <li><a href="/contact">我的订单</a></li>
           </ul>
         </div>
       </nav>
