--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700"> 
-    <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+<head>
+  <title>Shoppers &mdash; Colorlib e-Commerce Template</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
-    <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
-    <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
-    <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Mukta:300,400,700">
+  <link rel="stylesheet" href="/stylesheets/fonts/icomoon/style.css">
+
+  <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/magnific-popup.css">
+  <link rel="stylesheet" href="/stylesheets/jquery-ui.css">
+  <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
+  <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css">
 
 
-    <link rel="stylesheet" href="/stylesheets/aos.css">
+  <link rel="stylesheet" href="/stylesheets/aos.css">
 
-    <link rel="stylesheet" href="/stylesheets/style1.css">
-    
-  </head>
-  <body>
-  
+  <link rel="stylesheet" href="/stylesheets/style1.css">
+
+</head>
+
+<body>
+
   <div class="site-wrap">
     <header class="site-navbar" role="banner">
       <div class="site-navbar-top">
@@ -44,51 +46,39 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li><a href="#"><span class="icon icon-person"></span></a></li>
-                  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                  <li><a href="/login"><span class="icon icon-person"></span></a></li>
+                  <li><a href="/contact"><span class="icon icon-th-list"></span></a></li>
                   <li>
                     <a href="/cart" class="site-cart">
                       <span class="icon icon-shopping_cart"></span>
-                      <span class="count">2</span>
+                      <span class="count"><%=obj %></span>
                     </a>
-                  </li> 
-                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span class="icon-menu"></span></a></li>
+                  </li>
+                  <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span
+                        class="icon-menu"></span></a></li>
                 </ul>
-              </div> 
+              </div>
             </div>
 
           </div>
         </div>
-      </div> 
+      </div>
       <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children">
               <a href="/">首页</a>
-              <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
-                <li class="has-children">
-                  <a href="#">Sub Menu</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="has-children">
-              <a href="/about">关于</a>
+              <a>专区</a>
               <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
+                <li><a href="/region/1">送朋友</a></li>
+                <li><a href="/region/2">送恋人</a></li>
+                <li><a href="/region/3">送长辈</a></li>
               </ul>
             </li>
             <li><a href="/shop">店铺</a></li>
-            <li class="active"><a href="/contact">收货地址</a></li>
+            <li class="active"><a href="/contact">我的订单</a></li>
           </ul>
         </div>
       </nav>
@@ -97,82 +87,75 @@
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mb-0"><a href="/">首页</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">收货地址</strong></div>
-        </div>
-      </div>
-    </div>  
-
-    <div class="site-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="h3 mb-3 text-black">填写收货地址</h2>
-          </div>
-          <div class="col-md-7">
-            <form action="#" method="post">
-              <div class="p-3 p-lg-5 border">
-                <div class="form-group row">
-                  <div class="col-md-6">
-                    <label for="c_fname" class="text-black">收货人<span class="text-danger">*</span></label>
-                    <input type="text" class="form-control" id="c_fname" name="c_fname">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <label for="c_email" class="text-black">手机号码 <span class="text-danger">*</span></label>
-                    <input type="email" class="form-control" id="c_email" name="c_email" placeholder="">
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <label for="c_subject" class="text-black">选择地区</label>
-                    <input type="text" class="form-control" id="c_subject" name="c_subject">
-                  </div>
-                </div>
-
-                <div class="form-group row">
-                  <div class="col-md-12">
-                    <label for="c_message" class="text-black">详细地址</label>
-                    <textarea name="c_message" id="c_message" cols="30" rows="7" class="form-control"></textarea>
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <div class="col-lg-12">
-                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="提交信息">
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="col-md-5 ml-auto">
-            <div class="p-4 border mb-3">
-              <span class="d-block text-primary h6 text-uppercase">New York</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-            </div>
-            <div class="p-4 border mb-3">
-              <span class="d-block text-primary h6 text-uppercase">London</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-            </div>
-            <div class="p-4 border mb-3">
-              <span class="d-block text-primary h6 text-uppercase">Canada</span>
-              <p class="mb-0">203 Fake St. Mountain View, San Francisco, California, USA</p>
-            </div>
-
-          </div>
+          <div class="col-md-12 mb-0"><a href="/">首页</a> <span class="mx-2 mb-0">/</span> <strong
+              class="text-black">我的订单</strong></div>
         </div>
       </div>
     </div>
+    <div>
+      <table id="bootstrap-data-table" class="table table-striped table-bordered">
+        <thead>
+          <tr>
+            <th>订单号</th>
+            <th>图片</th>
+            <th>名称</th>
+            <th>数量</th>
+            <th>价格</th>
+            <th>收货人</th>
+            <th>地址</th>
+            <th>订单状态</th>
+            <th>操作</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for(var i=0 ;i < list.length; i++){ %>
+            <tr datakey=<%=list[i].id %> >
+              <td>
+                <%=list[i].id %>
+              </td>
+              <td class="img">
+                <img src='<%=list[i].product_img %>' style="height: 150px">
+              </td>
+              <td>
+                <%=list[i].product_name %>
+              </td>
+              <td>
+                <%=list[i].amount %>
+              </td>
+              <td>
+                <%=list[i].total_price %>
+              </td>
+              <td>
+                <%=list[i].fname %>
+              </td>
+              <td>
+                <%=list[i].address %>
+              </td>
+              <td>
+                <%=list[i].stutas %>
+              </td>
+              <td>
+                <button class="del">删除</button>
+                <button>确认收货</button>
+              </td>
+            </tr>
+            <%} %>
+        </tbody>
+      </table>
+    </div>
 
-        <div class="row pt-5 mt-5 text-center">
-          <div class="col-md-12">
-            <p>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script data-cfasync="false"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
-          </div>
-          
-        </div>
+    <div class="row pt-5 mt-5 text-center">
+      <div class="col-md-12">
+        <p>
+          Copyright &copy;
+          <script data-cfasync="false"></script>
+          <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i
+            class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"
+            class="text-primary">Colorlib</a>
+        </p>
+      </div>
+
+    </div>
   </div>
 
   <script src="/javascripts/jquery-3.3.1.min.js"></script>
@@ -182,8 +165,8 @@
   <script src="/javascripts/owl.carousel.min.js"></script>
   <script src="/javascripts/jquery.magnific-popup.min.js"></script>
   <script src="/javascripts/aos.js"></script>
-
   <script src="/javascripts/main.js"></script>
-    
-  </body>
+
+</body>
+
 </html>
