--- a/views/region.ejs
+++ b/views/region.ejs
@@ -51,9 +51,7 @@
                   <li>
                     <a href="/cart" class="site-cart">
                       <span class="icon icon-shopping_cart"></span>
-                      <span class="count">
-                        <%=obj %>
-                      </span>
+                      <span class="count"><%=obj %></span>
                     </a>
                   </li>
                   <li class="d-inline-block d-md-none ml-md-0"><a href="#" class="site-menu-toggle js-menu-toggle"><span
@@ -68,7 +66,7 @@
       <nav class="site-navigation text-right text-md-center" role="navigation">
         <div class="container">
           <ul class="site-menu js-clone-nav d-none d-md-block">
-            <li class="has-children active">
+            <li class="has-children">
               <a href="/">首页</a>
             </li>
             <li class="has-children">
@@ -79,114 +77,49 @@
                 <li><a href="/region/3">送长辈</a></li>
               </ul>
             </li>
-            <li><a href="/shop">店铺</a></li>
+            <li class="active"><a href="/shop">店铺</a></li>
             <li><a href="/contact">我的订单</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <div class="site-blocks-cover" style="background-image: url(images/21_birthday_banner_pc.jpg);" data-aos="fade">
-    </div>
-
-    <div class="site-section site-section-sm site-blocks-1">
+    <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="">
-            <div class="icon mr-4 align-self-start">
-              <span class="icon-truck"></span>
-            </div>
-            <div class="text">
-              <h2 class="text-uppercase">免运费</h2>
-              <p>三小时全国送花</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon mr-4 align-self-start">
-              <span class="icon-refresh2"></span>
-            </div>
-            <div class="text">
-              <h2 class="text-uppercase">免费退货</h2>
-              <p>提供三包服务</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon mr-4 align-self-start">
-              <span class="icon-help"></span>
-            </div>
-            <div class="text">
-              <h2 class="text-uppercase">客户支持</h2>
-              <p>低价保障</p>
-            </div>
-          </div>
+          <div class="col-md-12 mb-0"><a href="/">首页</a> <span class="mx-2 mb-0">/</span> <strong
+              class="text-black">店铺</strong></div>
         </div>
       </div>
     </div>
 
-    <div class="site-section site-blocks-2">
+    <div class="site-section">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-4 mb-4 mb-lg-0" data-aos="fade" data-aos-delay="">
-            <a class="block-2-item" href="/region/1">
-              <figure class="image">
-                <img src="/images/home_floor_lover.png" alt="" class="img-fluid" style="width: 100%;">
-              </figure>
-              <div class="text">
-                <span class="text-uppercase">久违亦如初见</span>
-                <h3>送朋友</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
-            <a class="block-2-item" href="/region/2">
-              <figure class="image">
-                <img src="/images/home_floor_song.jpg" alt="" class="img-fluid" style="width: 100%;">
-              </figure>
-              <div class="text">
-                <span class="text-uppercase">所有怦然心动，都是你</span>
-                <h3>送恋人</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
-            <a class="block-2-item" href="/region/3">
-              <figure class="image">
-                <img src="/images/home_floor_elder.png" alt="" class="img-fluid" style="width: 100%;">
-              </figure>
-              <div class="text">
-                <span class="text-uppercase">谢谢你 我爱你</span>
-                <h3>送长辈</h3>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="site-section block-3 site-blocks-2 bg-light">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-7 site-section-heading text-center pt-4">
-            <h2>特色产品</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="nonloop-block-3 owl-carousel">
+        <div class="row mb-5">
+          <div class="col-md-9 order-2">
+
+            <div class="row">
+              <div class="col-md-12 mb-5">
+                <div class="float-md-left mb-4">
+                  <h2 class="text-black h5">所有商品</h2>
+                </div>
+              </div>
+            </div>
+            <div class="row mb-5">
               <% for(var i=0 ;i < list.length; i++){ %>
-                <div class="item">
-                  <div class="block-4 text-center">
+                <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
+                  <div class="block-4 text-center border">
                     <figure class="block-4-image">
-                      <a href="/shop/<%=list[i].id %>">
-                        <img src="<%=list[i].product_img %>" alt="Image placeholder" class="img-fluid">
-                      </a>
+                      <a href="/shop/<%=list[i].id %>"><img src="<%=list[i].product_img %>" alt="Image placeholder"
+                          class="img-fluid"></a>
                     </figure>
                     <div class="block-4-text p-4">
                       <h3><a href="/shop/<%=list[i].id %>">
                           <%=list[i].product_name %>
                         </a></h3>
                       <p class="mb-0">
-                        <%=list[i].details %>
+                        <%=list[i].intro %>
                       </p>
                       <p class="text-primary font-weight-bold">￥<%=list[i].price %>
                       </p>
@@ -200,24 +133,6 @@
       </div>
     </div>
 
-    <div class="site-section block-8">
-      <div class="container">
-        <div class="row justify-content-center  mb-5">
-          <div class="col-md-7 site-section-heading text-center pt-4">
-          </div>
-        </div>
-        <div class="row align-items-center">
-          <div class="col-md-12 col-lg-7 mb-5">
-            <a href="/shop"><img src="images/20210511201222.jpg" alt="Image placeholder" class="img-fluid rounded"></a>
-          </div>
-          <div class="col-md-12 col-lg-5 text-center pl-md-5">
-            <h2><a href="/shop">做个浪漫的人，从给自己买花开始</a></h2>
-            <p>喜欢鲜花、喜欢浪漫的话、喜欢深情的拥抱、喜欢一切细碎的仪式感。</p>
-            <p><a href="/shop" class="btn btn-primary btn-sm">立即选购</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="row pt-5 mt-5 text-center">
       <div class="col-md-12">
         <p>
@@ -237,7 +152,6 @@
     <script src="/javascripts/owl.carousel.min.js"></script>
     <script src="/javascripts/jquery.magnific-popup.min.js"></script>
     <script src="/javascripts/aos.js"></script>
-
     <script src="/javascripts/main.js"></script>
 
 </body>
