--- a/views/tables2.ejs
+++ b/views/tables2.ejs
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html class="no-js" lang="">
 
 <head>
@@ -92,56 +92,23 @@
                     <div class="col-md-12">
                         <div class="card">
                             <div class="card-header">
-                                <strong class="card-title">商品列表</strong>
-                                <button id="add">添加</button>
+                                <strong class="card-title">订单列表</strong>
                             </div>
                             <div class="card-body">
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
+                                            <th>订单号</th>
                                             <th>图片</th>
                                             <th>名称</th>
-                                            <th>类别</th>
-                                            <th>详情</th>
+                                            <th>数量</th>
                                             <th>价格</th>
-                                            <th>销量</th>
-                                            <th>库存</th>
-                                            <th>上架时间</th>
-                                            <th>操作</th>
+                                            <th>收货人</th>
+                                            <th>地址</th>
+                                            <th>下单时间</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
-                                        <% for(var i=0 ;i < list.length; i++){ %>
-                                            <tr datakey=<%=list[i].id %> >
-                                                <td class="img"><img src='<%=list[i].product_img %>' ></td>
-                                                <td>
-                                                    <%=list[i].product_name %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].category_name %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].details %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].price %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].sales_count %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].inventory %>
-                                                </td>
-                                                <td>
-                                                    <%=list[i].create_time %>
-                                                </td>
-                                                <td>
-                                                    <button class="cha">编辑</button>
-                                                    <button class="del">删除</button>
-                                                </td>
-                                            </tr>
-                                            <%} %>
-                                    </tbody>
+                                   
                                 </table>
                             </div>
                         </div>
@@ -167,8 +134,6 @@
     <script src="/javascripts/buttons.print.min.js"></script>
     <script src="/javascripts/buttons.colVis.min.js"></script>
     <script src="/javascripts/datatables-init.js"></script>
-    <script src="/javascripts/product.js"></script>
-
 
 
     <script type="text/javascript">
