--- a/views/add.ejs
+++ b/views/add.ejs
@@ -14,7 +14,7 @@
           <p><input type="text" name="product_name" ></p>
         </div>
         <div class="form-group">
-            <label>分类名称</label>
+            <label>种类</label>
             <p>
                 <input type="text" name="category_name" list="category" autocomplete="off" value="">
                 <datalist id="category">
@@ -23,6 +23,7 @@
                     <option>绣球花</option>
                     <option>康乃馨</option>
                     <option>向日葵</option>
+                    <option>满天星</option>
                 </datalist>
             </p>
         </div>
