--- a/views/register.ejs
+++ b/views/register.ejs
@@ -110,7 +110,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!--footer-->
 	<div class="footer">
 		<h2>&copy; 2018 Classic Register Form. All rights reserved | Design by
-			<a href="http://w3layouts.com">W3layouts</a>
+			<a>W3layouts</a>
 		</h2>
 	</div>
 	<!--//footer-->
