--- a/views/tables.ejs
+++ b/views/tables.ejs
@@ -36,16 +36,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="/tables2">Basic Table</a></li>
-                            <li><i class="fa fa-table"></i><a href="/tables">Data Table</a></li>
+                            <li><i class="fa fa-table"></i><a href="/tables2">订单列表</a></li>
+                            <li><i class="fa fa-table"></i><a href="/tables">商品列表</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adlogin">Login</a></li>
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adregister">Register</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adlogin">登录</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adregister">注册</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -61,26 +61,6 @@
                     <a class="navbar-brand"><img src="/images/logo1.png" alt="Logo"></a>
                     <a class="navbar-brand hidden"><img src="/images/logo2.png" alt="Logo"></a>
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
-                </div>
-            </div>
-            <div class="top-right">
-                <div class="header-menu">
-                    <div class="user-area dropdown float-right">
-                        <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="User Avatar">
-                        </a>
-                        <div class="user-menu dropdown-menu">
-                            <a class="nav-link" href="#"><i class="fa fa-user"></i>My Profile</a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-bell-o"></i>Notifications <span
-                                    class="count">13</span></a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-cog"></i>Settings</a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-power-off"></i>Logout</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </header>
