--- a/views/shopsingle.ejs
+++ b/views/shopsingle.ejs
@@ -46,8 +46,8 @@
             <div class="col-6 col-md-4 order-3 order-md-3 text-right">
               <div class="site-top-icons">
                 <ul>
-                  <li><a href="#"><span class="icon icon-person"></span></a></li>
-                  <li><a href="#"><span class="icon icon-heart-o"></span></a></li>
+                  <li><a href="/login"><span class="icon icon-person"></span></a></li>
+                  <li><a href="/contact"><span class="icon icon-th-list"></span></a></li>
                   <li>
                     <a href="/cart" class="site-cart">
                       <span class="icon icon-shopping_cart"></span>
@@ -68,30 +68,17 @@
           <ul class="site-menu js-clone-nav d-none d-md-block">
             <li class="has-children">
               <a href="/">首页</a>
-              <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
-                <li class="has-children">
-                  <a href="#">Sub Menu</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Menu One</a></li>
-                    <li><a href="#">Menu Two</a></li>
-                    <li><a href="#">Menu Three</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="has-children">
-              <a href="/about">关于</a>
+              <a>专区</a>
               <ul class="dropdown">
-                <li><a href="#">Menu One</a></li>
-                <li><a href="#">Menu Two</a></li>
-                <li><a href="#">Menu Three</a></li>
+                <li><a href="/region/1">送朋友</a></li>
+                <li><a href="/region/2">送恋人</a></li>
+                <li><a href="/region/3">送长辈</a></li>
               </ul>
             </li>
             <li class="active"><a href="/shop">店铺</a></li>
-            <li><a href="/contact">收获地址</a></li>
+            <li><a href="/contact">我的订单</a></li>
           </ul>
         </div>
       </nav>
