--- a/views/tables2.ejs
+++ b/views/tables2.ejs
@@ -36,16 +36,16 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-table"></i>Tables</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="fa fa-table"></i><a href="/tables2">Basic Table</a></li>
-                            <li><i class="fa fa-table"></i><a href="/tables">Data Table</a></li>
+                            <li><i class="fa fa-table"></i><a href="/tables2">订单列表</a></li>
+                            <li><i class="fa fa-table"></i><a href="/tables">商品列表</a></li>
                         </ul>
                     </li>
                     <li class="menu-item-has-children dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adlogin">Login</a></li>
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adregister">Register</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adlogin">登录</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adregister">注册</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,26 +63,6 @@
                     <a id="menuToggle" class="menutoggle"><i class="fa fa-bars"></i></a>
                 </div>
             </div>
-            <div class="top-right">
-                <div class="header-menu">
-                    <div class="user-area dropdown float-right">
-                        <a href="#" class="dropdown-toggle active" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <img class="user-avatar rounded-circle" src="/images/admin.jpg" alt="User Avatar">
-                        </a>
-                        <div class="user-menu dropdown-menu">
-                            <a class="nav-link" href="#"><i class="fa fa-user"></i>My Profile</a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-bell-o"></i>Notifications <span
-                                    class="count">13</span></a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-cog"></i>Settings</a>
-
-                            <a class="nav-link" href="#"><i class="fa fa-power-off"></i>Logout</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </header>
 
         <div class="content">
@@ -98,17 +78,60 @@
                                 <table id="bootstrap-data-table" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th>订单号</th>
                                             <th>图片</th>
+                                            <th>订单号</th>
                                             <th>名称</th>
                                             <th>数量</th>
                                             <th>价格</th>
                                             <th>收货人</th>
+                                            <th>电话</th>
                                             <th>地址</th>
+                                            <th>备注</th>
+                                            <th>状态</th>
                                             <th>下单时间</th>
+                                            <th>操作</th>
                                         </tr>
                                     </thead>
-                                   
+                                    <tbody>
+                                        <% for(var i=0 ;i < list.length; i++){ %>
+                                            <tr datakey=<%=list[i].id %> >
+                                                <td class="img"><img src='<%=list[i].product_img %>'></td> 
+                                                <td>
+                                                    <%=list[i].id %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].product_name %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].amount %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].total_price %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].fname %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].phone %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].address %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].remark %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].status %>
+                                                </td>
+                                                <td>
+                                                    <%=list[i].create_time %>
+                                                </td>
+                                                <td>
+                                                    <button class="cha">编辑</button>
+                                                </td>
+                                            </tr>
+                                            <%} %>
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
@@ -139,6 +162,19 @@
     <script type="text/javascript">
         $(document).ready(function () {
             $('#bootstrap-data-table-export').DataTable();
+        });
+//修改
+        $(function () {
+            $("#bootstrap-data-table").delegate(".cha", "click", function () {
+                let id = $(this).parent().parent().attr("datakey");
+                $.ajax({
+                    url: "/tables2/chapage/" + id,
+                    type: "GET",
+                    success: function () {
+                        window.location.href = '/tables2/chapage/' + id;
+                    }
+                });
+            });
         });
     </script>
 
