--- a/views/adregister.ejs
+++ b/views/adregister.ejs
@@ -40,11 +40,9 @@
                         <div class="form-group">
                             <label>Password</label>
                             <input type="password" class="form-control" placeholder="Password" name="password">
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Agree the terms and policy
-                            </label>
+                            <% if(message){ %>
+                                <p style="color: red; font-size: small;"> <%= message %> </p>
+                            <% } %>
                         </div>
                         <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>
                         <div class="register-link m-t-15 text-center">
