--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -169,7 +169,7 @@
 
                 <div class="row">
                   <div class="col-md-12">
-                    <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='/checkout'">结算</button>
+                    <button class="btn btn-primary btn-lg py-3 btn-block" id="close">结算</button>
                   </div>
                 </div>
               </div>
