--- a/views/pay.ejs
+++ b/views/pay.ejs
@@ -25,7 +25,10 @@
 					<form action="/pay" method="post" class="signin-form">
 						<div class="form-input">
 							<input type="password" name="password" placeholder="Password" required="">
-						</div>
+							
+						</div><% if(message){ %>
+								<p style="color: red; font-size: small;"> <%= message %> </p>
+							<% } %>
 						<button type="submit" class="btn btn-primary theme-button mt-4">confirm</button>
 					</form>
 				</div>
