--- a/views/add.ejs
+++ b/views/add.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 </head>
 <body>
-    <form action="/tables/add" method="POST">
+    <form action="/tables/add" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label>商品名称</label>
           <p><input type="text" name="product_name" ></p>
